--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-plataform=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.url = jdbc:mysql://localhost:3306/portfoliodos?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url = jdbc:mysql://u0uqgupnkde0f7yr:v3WaxERDtgFpuqZqIX8O@bxrpps7qkksddfxbdird-mysql.services.clever-cloud.com:3306/bxrpps7qkksddfxbdird
+spring.datasource.username=u0uqgupnkde0f7yr
+spring.datasource.password=v3WaxERDtgFpuqZqIX8O
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-plataform=org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.url = jdbc:mysql://localhost:3306/portfoliodos?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
 
 #security
 
